<resources>
    <string name="app_name">ASTC</string>
    <string name="content">标题</string>
    <string name="open_app">进入ASTC</string>
    <string name="login_failed">登录失败</string>
    <string name="loading">加载中...</string>
    <string name="loading_error">服务器连接失败</string>
    <string name="todo">TODO</string>
    <string name="import_wallet">导入钱包</string>
    <string name="create_wallet">创建钱包</string>
    <string name="user_name">用户名</string>
    <string name="please_enter">请输入</string>
    <string name="username_prompt">请输入字母加数字8–28位的用户名</string>
    <string name="password_prompt">请输入六位数字的密码</string>
    <string name="ok_password_prompt">请输入确认密码</string>
    <string name="please_enter_transaction_password">请输入交易密码</string>
    <string name="recommended_users_prompt">推荐人用户名</string>
    <string name="privacy_policy">我已经仔细阅读并同意</string>
    <string name="please_agree">请同意</string>
    <string name="service_tips">服务及隐私条款</string>
    <string name="next_step">下一步</string>
    <string name="backup_mnemonic">备份助记词</string>
    <string name="determine_mnemonic">确认你的钱包助记词</string>
    <string name="mnemonic_error">助记词顺序错误</string>
    <string name="sequence_mnemonic">请按顺序点击助记词,以确认你的备份助记词正确。</string>
    <string name="create_tips">注：交易密码与登录密码一致，用户需修改交易密码在 钱包里我的—设置—修改交易密码处进行修改。</string>
    <string name="please_choose">请选择</string>
    <string name="mnemonic">助记词</string>
    <string name="account_number">账号</string>
    <string name="please_enter_user_name">请输入用户名</string>
    <string name="click_for_mnemonic">点击获取助记词</string>
    <string name="create_mnemonic_tips">您没有助记词，请创建助记词</string>
    <string name="create">创建</string>
    <string name="start_import">开始导入</string>
    <string name="please_enter_your_password">请输入登录密码</string>
    <string name="inconsistent_passwords">密码不一致</string>
    <string name="prompt_for_correct_mnemonic">助记词顺序正确，是否将助记词 从钱包里移除。</string>
    <string name="home">首页</string>
    <string name="wealth">财富</string>
    <string name="conversation">会话</string>
    <string name="application">应用</string>
    <string name="mine">我的</string>
    <string name="login_password">登录密码</string>
    <string name="backup_word_tips">如果有人获取你的助记词将直接 获取你的资产！请抄写下助记词 并存放在安全的地方。</string>
    <string name="scan_it">扫一扫</string>
    <string name="collection">收款</string>
    <string name="transfer">转账</string>
    <string name="account">账户</string>
    <string name="block_query">区块查询</string>
    <string name="invite_friends">邀请好友</string>
    <string name="token">通证</string>
    <string name="more">更多</string>
    <string name="scan_code">扫码</string>
    <string name="search_for">搜索</string>
    <string name="select_image">选择图片</string>
    <string name="domestic_services">生活服务</string>
    <string name="game_entertainment">游戏娱乐</string>
    <string name="about_us">关于我们</string>
    <string name="order_record">订单记录</string>
    <string name="enter_search">请输入您要搜索的内容</string>
    <string name="copy_mnemonic">抄写下你的钱包助记词</string>
    <string name="copy_mnemonic_tips">助记用于恢复钱包或重置钱包密码，将它准确的抄写到纸上，并存放在只有你知道的安全地方</string>
    <string name="jump_over">跳过</string>
    <string name="news">消息</string>
    <string name="et_contact_details">填写您的手机或者邮箱</string>
    <string name="submit">提交</string>
    <string name="language_settings">语言设置</string>
    <string name="determine">确定</string>
    <string name="language_chinese">简体中文</string>
    <string name="language_english">English</string>
    <string name="language_korean">한국어</string>
    <string name="individual_certification">个人认证</string>
    <string name="type_of_certificate">证件类型</string>
    <string name="certificate_name">证件姓名</string>
    <string name="enterprise_certification">企业认证</string>
    <string name="legal_person_name">法人姓名</string>
    <string name="legal_person_name_tips">请输入与证件一致的姓名</string>
    <string name="id_number">证件号码</string>
    <string name="id_number_tips">请输入与证件一致的号码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="save">保存</string>
    <string name="please_enter_cardholder_name">请输入持卡人姓名</string>
    <string name="please_enter_the_bank">请输入银行</string>
    <string name="please_enter_the_account_opening_bank">请输入开户分行银行</string>
    <string name="please_enter_your_bank_card_number">请输入您的银行卡号</string>
    <string name="add_to">添加</string>
    <string name="fill_in_the_appeal">填写申诉</string>
    <string name="appeal_tips">请输入申诉内容，我们将为您服务</string>
    <string name="certification_status">认证状态</string>
    <string name="under_review">审核中</string>
    <string name="modify_login_password">修改登录密码</string>
    <string name="please_enter_old_password">请输入旧密码</string>
    <string name="please_enter_new_password">请输入新密码</string>
    <string name="payee_wallet_address">收款人钱包地址</string>
    <string name="transfer_amount">转账金额</string>
    <string name="remark">备 注</string>
    <string name="miner_fee">矿工费用</string>
    <string name="fast">快</string>
    <string name="slow">慢</string>
</resources>