<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.mine.ModifyLoginPasswordActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:title="@string/modify_login_password" />

    <com.example.astc.util.views.ClearEditText
        android:id="@+id/ev_login_password1"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/please_enter_old_password" />

    <com.example.astc.util.views.ClearEditText
        android:id="@+id/ev_login_password2"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:hint="@string/please_enter_new_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bu_login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@mipmap/bu_yellow"
        android:gravity="center"
        android:text="@string/confirm_modify"
        android:textColor="@android:color/white" />
</LinearLayout>