<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.home.TransferActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        app:rightIcon="@mipmap/money"
        app:title="@string/transfer" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/sp_transfer"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:background="@drawable/bg_dialog_input"
            android:entries="@array/sp_transfer" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/im_sweep_transfer"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@mipmap/scan" />
    </LinearLayout>

    <com.example.astc.util.views.ClearEditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_dialog_input"
        android:hint="@string/payee_wallet_address" />

    <com.example.astc.util.views.ClearEditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_dialog_input"
        android:hint="@string/transfer_amount" />

    <com.example.astc.util.views.ClearEditText
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/bg_dialog_input"
        android:hint="@string/remark" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_margin="10dp"
        android:text="@string/miner_fee"
        android:textColor="@android:color/black"
        android:textSize="15sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <SeekBar
        android:id="@+id/bar_transfer"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_margin="10dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="0.0000"
        android:textColor="@color/yellow" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_fast_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fast"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_slow_transfer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="14"
            android:text="@string/slow"
            android:textColor="@android:color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bu_transfer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:background="@mipmap/bu_yellow"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@android:color/white" />
</LinearLayout>